<resources>
    <string name="app_name">Steampunked</string>
    <string name="start_button">Start Game</string>
    <string name="turnInfo">User1\'s Turn</string>
    <string name="winningPlayer">Player \" \" has punked you</string>
    <string name="surrender_button">Surrender</string>
    <string name="PlayerOneName">Player One Name</string>
    <string name="PlayerTwoName">Player Two Name</string>
    <string name="initial_time">1:00</string>
    <string name="installButton">Install</string>
    <string name="restart">Restart</string>
    <string name="image_description">Picture of the steampunk</string>
    <string name="gameView_description">The game playing area</string>
    <string name="discardButton">discard</string>
    <string name="openValveButton">Open Valve</string>
    <string name="howToPlay">How To Play</string>
    <string name="howToPlayMessage">Drag and install pipes to connect your start pipe to the end pipe. Press install to install button. Discard to refresh for one random pipe. Open valve when you are done. Surrender button surrender</string>
    <string name="playerNameError">Error: Player name is incorrect</string>
    <string name="PipeError">Error: Invalid pipe connection.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">Remember Me</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="RegisterUsername">Username</string>
    <string name="enterUsername">Enter in your desired username.</string>
    <string name="regPassHintOne">Enter in a password.</string>
    <string name="regPassHintTwo">Enter in the same password for verification.</string>
    <string name="registerNew">Register</string>
    <string name="loginerror">Failed to Log in</string>
    <string name="passwordnotmatch">Password doesn\'t match</string>
    <string name="needLogin">Please Log in first</string>
    <string name="registerError">Failed to register, please try again</string>
    <string name="loginsuccess">Log in successfully</string>
    <string name="createRoom">create a new room</string>
    <string name="joinRoom">Join Room</string>
    <string name="roomNameHint">Room Name</string>
    <string name="create">Create</string>
    <string name="save_fail">Failed to save the Pipe to the server</string>
    <string name="load_fail">Failed to load the Pipe from the server</string>
    <string name="join_room_name"> </string>
    <string name="enter_room_name">"Enter Room Name: "</string>
    <string name="waiting">Thank You For Waiting</string>
    <string name="join">Room Join Failed</string>
    <string name="createR">Room Create Failed</string>
    <string name="timeoutWarning">About to forfeit due to inactivity!</string>

</resources>